src/bison/parser.output
State 0 conflicts: 1 shift/reduce
State 133 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stmt_list eos

    2 stmt_list: stmt_list eos stmt
    3          | stmt
    4          | stmt_list error eos stmt
    5          | error

    6 eos: "fin de línea"
    7    | ';'

    8 stmt: ε
    9     | decl
   10     | assign
   11     | del
   12     | insert
   13     | if
   14     | for
   15     | while
   16     | fn
   17     | expr
   18     | "exit"
   19     | "break"
   20     | "continue"
   21     | return

   22 $@1: ε

   23 block: '{' $@1 stmt_list '}'

   24 $@2: ε

   25 $@3: ε

   26 fn: "fn" "identificador" '(' $@2 params ')' $@3 block

   27 params: id_list
   28       | id_list ',' "..."
   29       | "..."
   30       | ε

   31 if: "if" expr block elif

   32 elif: "elif" expr block elif
   33     | "else" block
   34     | ε

   35 $@4: ε

   36 $@5: ε

   37 $@6: ε

   38 for: "for" $@4 "identificador" $@5 "in" expr $@6 block

   39 $@7: ε

   40 while: "while" expr $@7 block

   41 decl: "let" id_list
   42     | "let" id_list '=' expr_list

   43 assign: assignable_list assign_op expr_list

   44 assignable_list: assignable_list ',' assignable
   45                | assignable

   46 assignable: "identificador"
   47           | elem

   48 insert: primary '[' '!' expr ']' '=' expr
   49       | primary '[' expr '!' ']' '=' expr

   50 id_list: id_list ',' "identificador"
   51        | "identificador"

   52 expr_list: expr_list ',' expr
   53          | expr

   54 assign_op: '='
   55          | "+="
   56          | "-="
   57          | "*="
   58          | "/="

   59 del: "del" del_target_list

   60 del_target_list: del_target_list ',' del_target
   61                | del_target

   62 del_target: "identificador"
   63           | elem
   64           | cmp "in" sum

   65 return: "return" expr
   66       | "return"

   67 expr: expr "or" and
   68     | and

   69 and: and "and" not
   70    | not

   71 not: "not" not
   72    | cmp

   73 cmp: cmp "==" sum
   74    | cmp "!=" sum
   75    | cmp '<' sum
   76    | cmp '>' sum
   77    | cmp "<=" sum
   78    | cmp ">=" sum
   79    | cmp "not" "in" sum
   80    | cmp "in" sum
   81    | sum

   82 sum: sum '+' term
   83    | sum '-' term
   84    | term

   85 term: term '*' factor
   86     | term '/' factor
   87     | factor

   88 factor: '-' factor
   89       | '#' primary
   90       | primary

   91 primary: '(' expr ')'
   92        | call
   93        | elem
   94        | "identificador"
   95        | "entero"
   96        | "átomo"

   97 $@8: ε

   98 primary: '[' $@8 args ']'

   99 $@9: ε

  100 primary: '{' $@9 args '}'

  101 call: primary '(' args ')'

  102 args: expr_list
  103     | ε

  104 elem: primary '[' expr ']'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 48 49
    '#' (35) 89
    '(' (40) 26 91 101
    ')' (41) 26 91 101
    '*' (42) 85
    '+' (43) 82
    ',' (44) 28 44 50 52 60
    '-' (45) 83 88
    '/' (47) 86
    ';' (59) 7
    '<' (60) 75
    '=' (61) 42 48 49 54
    '>' (62) 76
    '[' (91) 48 49 98 104
    ']' (93) 48 49 98 104
    '{' (123) 23 100
    '}' (125) 23 100
    error (256) 4 5
    "let" (258) 41 42
    "if" (259) 31
    "elif" (260) 32
    "else" (261) 33
    "while" (262) 40
    "for" (263) 38
    "in" (264) 38 64 79 80
    "fn" (265) 26
    "return" (266) 65 66
    "break" (267) 19
    "continue" (268) 20
    "exit" (269) 18
    "del" (270) 59
    "or" (271) 67
    "and" (272) 69
    "not" (273) 71 79
    "==" (274) 73
    "!=" (275) 74
    "<=" (276) 77
    ">=" (277) 78
    "+=" (278) 55
    "-=" (279) 56
    "*=" (280) 57
    "/=" (281) 58
    "fin de línea" (282) 6
    "identificador" <ast> (283) 26 38 46 50 51 62 94
    "átomo" <ast> (284) 96
    "entero" <ast> (285) 95
    "..." <ast> (286) 28 29


Nonterminals, with rules where they appear

    $accept (49)
        on left: 0
    program (50)
        on left: 1
        on right: 0
    stmt_list <ast> (51)
        on left: 2 3 4 5
        on right: 1 2 4 23
    eos (52)
        on left: 6 7
        on right: 1 2 4
    stmt <ast> (53)
        on left: 8 9 10 11 12 13 14 15 16 17 18 19 20 21
        on right: 2 3 4
    block <ast> (54)
        on left: 23
        on right: 26 31 32 33 38 40
    $@1 (55)
        on left: 22
        on right: 23
    fn <ast> (56)
        on left: 26
        on right: 16
    $@2 (57)
        on left: 24
        on right: 26
    $@3 (58)
        on left: 25
        on right: 26
    params <ast> (59)
        on left: 27 28 29 30
        on right: 26
    if <ast> (60)
        on left: 31
        on right: 13
    elif <ast> (61)
        on left: 32 33 34
        on right: 31 32
    for <ast> (62)
        on left: 38
        on right: 14
    $@4 (63)
        on left: 35
        on right: 38
    $@5 (64)
        on left: 36
        on right: 38
    $@6 (65)
        on left: 37
        on right: 38
    while <ast> (66)
        on left: 40
        on right: 15
    $@7 (67)
        on left: 39
        on right: 40
    decl <ast> (68)
        on left: 41 42
        on right: 9
    assign <ast> (69)
        on left: 43
        on right: 10
    assignable_list <ast> (70)
        on left: 44 45
        on right: 43 44
    assignable <ast> (71)
        on left: 46 47
        on right: 44 45
    insert <ast> (72)
        on left: 48 49
        on right: 12
    id_list <ast> (73)
        on left: 50 51
        on right: 27 28 41 42 50
    expr_list <ast> (74)
        on left: 52 53
        on right: 42 43 52 102
    assign_op <ast_t> (75)
        on left: 54 55 56 57 58
        on right: 43
    del <ast> (76)
        on left: 59
        on right: 11
    del_target_list <ast> (77)
        on left: 60 61
        on right: 59 60
    del_target <ast> (78)
        on left: 62 63 64
        on right: 60 61
    return <ast> (79)
        on left: 65 66
        on right: 21
    expr <ast> (80)
        on left: 67 68
        on right: 17 31 32 38 40 48 49 52 53 65 67 91 104
    and <ast> (81)
        on left: 69 70
        on right: 67 68 69
    not <ast> (82)
        on left: 71 72
        on right: 69 70 71
    cmp <ast> (83)
        on left: 73 74 75 76 77 78 79 80 81
        on right: 64 72 73 74 75 76 77 78 79 80
    sum <ast> (84)
        on left: 82 83 84
        on right: 64 73 74 75 76 77 78 79 80 81 82 83
    term <ast> (85)
        on left: 85 86 87
        on right: 82 83 84 85 86
    factor <ast> (86)
        on left: 88 89 90
        on right: 85 86 87 88
    primary <ast> (87)
        on left: 91 92 93 94 95 96 98 100
        on right: 48 49 89 90 101 104
    $@8 (88)
        on left: 97
        on right: 98
    $@9 (89)
        on left: 99
        on right: 100
    call <ast> (90)
        on left: 101
        on right: 92
    args <ast> (91)
        on left: 102 103
        on right: 98 100 101
    elem <ast> (92)
        on left: 104
        on right: 47 63 93


State 0

    0 $accept: • program $end
    1 program: • stmt_list eos
    2 stmt_list: • stmt_list eos stmt
    3          | • stmt
    4          | • stmt_list error eos stmt
    5          | • error
    8 stmt: ε •  [error, "fin de línea", ';']
    9     | • decl
   10     | • assign
   11     | • del
   12     | • insert
   13     | • if
   14     | • for
   15     | • while
   16     | • fn
   17     | • expr
   18     | • "exit"
   19     | • "break"
   20     | • "continue"
   21     | • return
   26 fn: • "fn" "identificador" '(' $@2 params ')' $@3 block
   31 if: • "if" expr block elif
   38 for: • "for" $@4 "identificador" $@5 "in" expr $@6 block
   40 while: • "while" expr $@7 block
   41 decl: • "let" id_list
   42     | • "let" id_list '=' expr_list
   43 assign: • assignable_list assign_op expr_list
   44 assignable_list: • assignable_list ',' assignable
   45                | • assignable
   46 assignable: • "identificador"
   47           | • elem
   48 insert: • primary '[' '!' expr ']' '=' expr
   49       | • primary '[' expr '!' ']' '=' expr
   59 del: • "del" del_target_list
   65 return: • "return" expr
   66       | • "return"
   67 expr: • expr "or" and
   68     | • and
   69 and: • and "and" not
   70    | • not
   71 not: • "not" not
   72    | • cmp
   73 cmp: • cmp "==" sum
   74    | • cmp "!=" sum
   75    | • cmp '<' sum
   76    | • cmp '>' sum
   77    | • cmp "<=" sum
   78    | • cmp ">=" sum
   79    | • cmp "not" "in" sum
   80    | • cmp "in" sum
   81    | • sum
   82 sum: • sum '+' term
   83    | • sum '-' term
   84    | • term
   85 term: • term '*' factor
   86     | • term '/' factor
   87     | • factor
   88 factor: • '-' factor
   89       | • '#' primary
   90       | • primary
   91 primary: • '(' expr ')'
   92        | • call
   93        | • elem
   94        | • "identificador"
   95        | • "entero"
   96        | • "átomo"
   98        | • '[' $@8 args ']'
  100        | • '{' $@9 args '}'
  101 call: • primary '(' args ')'
  104 elem: • primary '[' expr ']'

    error            shift, and go to state 1
    "let"            shift, and go to state 2
    "if"             shift, and go to state 3
    "while"          shift, and go to state 4
    "for"            shift, and go to state 5
    "fn"             shift, and go to state 6
    "return"         shift, and go to state 7
    "break"          shift, and go to state 8
    "continue"       shift, and go to state 9
    "exit"           shift, and go to state 10
    "del"            shift, and go to state 11
    "not"            shift, and go to state 12
    "identificador"  shift, and go to state 13
    "átomo"          shift, and go to state 14
    "entero"         shift, and go to state 15
    '{'              shift, and go to state 16
    '('              shift, and go to state 17
    '['              shift, and go to state 18
    '-'              shift, and go to state 19
    '#'              shift, and go to state 20

    error           [reduce using rule 8 (stmt)]
    "fin de línea"  reduce using rule 8 (stmt)
    ';'             reduce using rule 8 (stmt)

    program          go to state 21
    stmt_list        go to state 22
    stmt             go to state 23
    fn               go to state 24
    if               go to state 25
    for              go to state 26
    while            go to state 27
    decl             go to state 28
    assign           go to state 29
    assignable_list  go to state 30
    assignable       go to state 31
    insert           go to state 32
    del              go to state 33
    return           go to state 34
    expr             go to state 35
    and              go to state 36
    not              go to state 37
    cmp              go to state 38
    sum              go to state 39
    term             go to state 40
    factor           go to state 41
    primary          go to state 42
    call             go to state 43
    elem             go to state 44

    shift/reduce conflict on token error:
        8 stmt: ε •
        5 stmt_list: • error
      Example: • error eos
      Shift derivation
        stmt_list
        ↳ 2: stmt_list    eos stmt
             ↳ 5: • error     ↳ 2: ε
      Reduce derivation
        stmt_list
        ↳ 4: stmt_list     error eos stmt
             ↳ 3: stmt               ↳ 4: ε
                  ↳ 8: ε •



State 1

    5 stmt_list: error •

    $default  reduce using rule 5 (stmt_list)


State 2

   41 decl: "let" • id_list
   42     | "let" • id_list '=' expr_list
   50 id_list: • id_list ',' "identificador"
   51        | • "identificador"

    "identificador"  shift, and go to state 45

    id_list  go to state 46


State 3

   31 if: "if" • expr block elif
   67 expr: • expr "or" and
   68     | • and
   69 and: • and "and" not
   70    | • not
   71 not: • "not" not
   72    | • cmp
   73 cmp: • cmp "==" sum
   74    | • cmp "!=" sum
   75    | • cmp '<' sum
   76    | • cmp '>' sum
   77    | • cmp "<=" sum
   78    | • cmp ">=" sum
   79    | • cmp "not" "in" sum
   80    | • cmp "in" sum
   81    | • sum
   82 sum: • sum '+' term
   83    | • sum '-' term
   84    | • term
   85 term: • term '*' factor
   86     | • term '/' factor
   87     | • factor
   88 factor: • '-' factor
   89       | • '#' primary
   90       | • primary
   91 primary: • '(' expr ')'
   92        | • call
   93        | • elem
   94        | • "identificador"
   95        | • "entero"
   96        | • "átomo"
   98        | • '[' $@8 args ']'
  100        | • '{' $@9 args '}'
  101 call: • primary '(' args ')'
  104 elem: • primary '[' expr ']'

    "not"            shift, and go to state 12
    "identificador"  shift, and go to state 47
    "átomo"          shift, and go to state 14
    "entero"         shift, and go to state 15
    '{'              shift, and go to state 16
    '('              shift, and go to state 17
    '['              shift, and go to state 18
    '-'              shift, and go to state 19
    '#'              shift, and go to state 20

    expr     go to state 48
    and      go to state 36
    not      go to state 37
    cmp      go to state 38
    sum      go to state 39
    term     go to state 40
    factor   go to state 41
    primary  go to state 49
    call     go to state 43
    elem     go to state 50


State 4

   40 while: "while" • expr $@7 block
   67 expr: • expr "or" and
   68     | • and
   69 and: • and "and" not
   70    | • not
   71 not: • "not" not
   72    | • cmp
   73 cmp: • cmp "==" sum
   74    | • cmp "!=" sum
   75    | • cmp '<' sum
   76    | • cmp '>' sum
   77    | • cmp "<=" sum
   78    | • cmp ">=" sum
   79    | • cmp "not" "in" sum
   80    | • cmp "in" sum
   81    | • sum
   82 sum: • sum '+' term
   83    | • sum '-' term
   84    | • term
   85 term: • term '*' factor
   86     | • term '/' factor
   87     | • factor
   88 factor: • '-' factor
   89       | • '#' primary
   90       | • primary
   91 primary: • '(' expr ')'
   92        | • call
   93        | • elem
   94        | • "identificador"
   95        | • "entero"
   96        | • "átomo"
   98        | • '[' $@8 args ']'
  100        | • '{' $@9 args '}'
  101 call: • primary '(' args ')'
  104 elem: • primary '[' expr ']'

    "not"            shift, and go to state 12
    "identificador"  shift, and go to state 47
    "átomo"          shift, and go to state 14
    "entero"         shift, and go to state 15
    '{'              shift, and go to state 16
    '('              shift, and go to state 17
    '['              shift, and go to state 18
    '-'              shift, and go to state 19
    '#'              shift, and go to state 20

    expr     go to state 51
    and      go to state 36
    not      go to state 37
    cmp      go to state 38
    sum      go to state 39
    term     go to state 40
    factor   go to state 41
    primary  go to state 49
    call     go to state 43
    elem     go to state 50


State 5

   35 $@4: ε •
   38 for: "for" • $@4 "identificador" $@5 "in" expr $@6 block

    $default  reduce using rule 35 ($@4)

    $@4  go to state 52


State 6

   26 fn: "fn" • "identificador" '(' $@2 params ')' $@3 block

    "identificador"  shift, and go to state 53


State 7

   65 return: "return" • expr
   66       | "return" •  [error, "fin de línea", ';', '}']
   67 expr: • expr "or" and
   68     | • and
   69 and: • and "and" not
   70    | • not
   71 not: • "not" not
   72    | • cmp
   73 cmp: • cmp "==" sum
   74    | • cmp "!=" sum
   75    | • cmp '<' sum
   76    | • cmp '>' sum
   77    | • cmp "<=" sum
   78    | • cmp ">=" sum
   79    | • cmp "not" "in" sum
   80    | • cmp "in" sum
   81    | • sum
   82 sum: • sum '+' term
   83    | • sum '-' term
   84    | • term
   85 term: • term '*' factor
   86     | • term '/' factor
   87     | • factor
   88 factor: • '-' factor
   89       | • '#' primary
   90       | • primary
   91 primary: • '(' expr ')'
   92        | • call
   93        | • elem
   94        | • "identificador"
   95        | • "entero"
   96        | • "átomo"
   98        | • '[' $@8 args ']'
  100        | • '{' $@9 args '}'
  101 call: • primary '(' args ')'
  104 elem: • primary '[' expr ']'

    "not"            shift, and go to state 12
    "identificador"  shift, and go to state 47
    "átomo"          shift, and go to state 14
    "entero"         shift, and go to state 15
    '{'              shift, and go to state 16
    '('              shift, and go to state 17
    '['              shift, and go to state 18
    '-'              shift, and go to state 19
    '#'              shift, and go to state 20

    $default  reduce using rule 66 (return)

    expr     go to state 54
    and      go to state 36
    not      go to state 37
    cmp      go to state 38
    sum      go to state 39
    term     go to state 40
    factor   go to state 41
    primary  go to state 49
    call     go to state 43
    elem     go to state 50


State 8

   19 stmt: "break" •

    $default  reduce using rule 19 (stmt)


State 9

   20 stmt: "continue" •

    $default  reduce using rule 20 (stmt)


State 10

   18 stmt: "exit" •

    $default  reduce using rule 18 (stmt)


State 11

   59 del: "del" • del_target_list
   60 del_target_list: • del_target_list ',' del_target
   61                | • del_target
   62 del_target: • "identificador"
   63           | • elem
   64           | • cmp "in" sum
   73 cmp: • cmp "==" sum
   74    | • cmp "!=" sum
   75    | • cmp '<' sum
   76    | • cmp '>' sum
   77    | • cmp "<=" sum
   78    | • cmp ">=" sum
   79    | • cmp "not" "in" sum
   80    | • cmp "in" sum
   81    | • sum
   82 sum: • sum '+' term
   83    | • sum '-' term
   84    | • term
   85 term: • term '*' factor
   86     | • term '/' factor
   87     | • factor
   88 factor: • '-' factor
   89       | • '#' primary
   90       | • primary
   91 primary: • '(' expr ')'
   92        | • call
   93        | • elem
   94        | • "identificador"
   95        | • "entero"
   96        | • "átomo"
   98        | • '[' $@8 args ']'
  100        | • '{' $@9 args '}'
  101 call: • primary '(' args ')'
  104 elem: • primary '[' expr ']'

    "identificador"  shift, and go to state 55
    "átomo"          shift, and go to state 14
    "entero"         shift, and go to state 15
    '{'              shift, and go to state 16
    '('              shift, and go to state 17
    '['              shift, and go to state 18
    '-'              shift, and go to state 19
    '#'              shift, and go to state 20

    del_target_list  go to state 56
    del_target       go to state 57
    cmp              go to state 58
    sum              go to state 39
    term             go to state 40
    factor           go to state 41
    primary          go to state 49
    call             go to state 43
    elem             go to state 59


State 12

   71 not: • "not" not
   71    | "not" • not
   72    | • cmp
   73 cmp: • cmp "==" sum
   74    | • cmp "!=" sum
   75    | • cmp '<' sum
   76    | • cmp '>' sum
   77    | • cmp "<=" sum
   78    | • cmp ">=" sum
   79    | • cmp "not" "in" sum
   80    | • cmp "in" sum
   81    | • sum
   82 sum: • sum '+' term
   83    | • sum '-' term
   84    | • term
   85 term: • term '*' factor
   86     | • term '/' factor
   87     | • factor
   88 factor: • '-' factor
   89       | • '#' primary
   90       | • primary
   91 primary: • '(' expr ')'
   92        | • call
   93        | • elem
   94        | • "identificador"
   95        | • "entero"
   96        | • "átomo"
   98        | • '[' $@8 args ']'
  100        | • '{' $@9 args '}'
  101 call: • primary '(' args ')'
  104 elem: • primary '[' expr ']'

    "not"            shift, and go to state 12
    "identificador"  shift, and go to state 47
    "átomo"          shift, and go to state 14
    "entero"         shift, and go to state 15
    '{'              shift, and go to state 16
    '('              shift, and go to state 17
    '['              shift, and go to state 18
    '-'              shift, and go to state 19
    '#'              shift, and go to state 20

    not      go to state 60
    cmp      go to state 38
    sum      go to state 39
    term     go to state 40
    factor   go to state 41
    primary  go to state 49
    call     go to state 43
    elem     go to state 50


State 13

   46 assignable: "identificador" •  ["+=", "-=", "*=", "/=", ',', '=']
   94 primary: "identificador" •  [error, "in", "or", "and", "not", "==", "!=", "<=", ">=", "fin de línea", ';', '}', '(', '[', '<', '>', '+', '-', '*', '/']

    "+="      reduce using rule 46 (assignable)
    "-="      reduce using rule 46 (assignable)
    "*="      reduce using rule 46 (assignable)
    "/="      reduce using rule 46 (assignable)
    ','       reduce using rule 46 (assignable)
    '='       reduce using rule 46 (assignable)
    $default  reduce using rule 94 (primary)


State 14

   96 primary: "átomo" •

    $default  reduce using rule 96 (primary)


State 15

   95 primary: "entero" •

    $default  reduce using rule 95 (primary)


State 16

   99 $@9: ε •
  100 primary: '{' • $@9 args '}'

    $default  reduce using rule 99 ($@9)

    $@9  go to state 61


State 17
